<resources>
    <string name="app_name">FinanKu</string>
    <string name="greeting_sign_in">Welcome Back</string>
    <string name="title_sign_in">Sign In</string>
    <string name="description_sign_in">Please sign in to continue</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_set_limit">Set Monthly Limit</string>
    <string name="desc_set_limit">Come on, enter your monthly limit so you can reach your finances</string>
    <string name="hint_limit_for_food">Limit for food</string>
    <string name="hint_set_limit_for_shopping">Limit for shopping</string>
    <string name="hint_set_limit_for_travel">Limit for travel</string>
    <string name="hint_limit_for_others">Limit for others</string>
    <string name="total">Total</string>
    <string name="lets_go">Let\'s go</string>
    <string name="greeting_sign_up">Hi, let’s make a plan</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="description_sign_up">Create an account to start a better life</string>
    <string name="full_name_input">Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password_input">Confirm Password</string>
    <string name="banner_sign_in">Banner Sign In</string>
    <string name="password_min_error">Password at least 8 characters</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_total_balance">Total balance spent this month</string>
    <string name="record_expenses">+ Record Expenses</string>
    <string name="greeting">Hi</string>
    <string name="dummy_first_name">Robert</string>
    <string name="dummy_balance">Rp 3.696.420</string>
    <string name="divider">/</string>
    <string name="statistic_title">Statistic</string>
    <string name="description_statistic">Total balance spent this month</string>
    <string name="spent_amount">Rp 3.696.420</string>
    <string name="slash">/</string>
    <string name="budget_statistic">6.000.000</string>
    <string name="background_statistic">background statistic</string>
    <string name="status_budget">Wasteful</string>
    <string name="percent">90%</string>
    <string name="category">Category</string>
    <string name="full_name">Robert Samuel</string>
    <string name="account_setting_title">Account Setting</string>
    <string name="dummy_limit">Rp 6.000.000</string>
    <string name="monthly_limit_title">Monthly Limit</string>
    <string name="app_version_title">App Version</string>
    <string name="app_version">1.0.0</string>
    <string name="logout">Logout</string>
    <string name="message">Message</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="history_title">History</string>
    <string name="dummy_date">20 March 2022</string>
    <string name="current_month">Current Month</string>
    <string name="last_month">Last Month</string>
    <string name="dummy_currency">Rp 50.000</string>
    <string name="enter_expenses_money_title">Enter Expenses Money</string>
    <string name="enter_expense_money_description">Enter the amount of money and the category, so we can supervise the expenses</string>
    <string name="category_type_hint">Category type</string>
    <string name="enter_amount_of_money_hint">Enter amount of money</string>
    <string name="input">Input</string>
    <string name="short_description_hint">Short description</string>
    <string name="rp">Rp</string>
    <string name="icon_item_history">Icon item history</string>
    <string name="description_history_item">Description History Item</string>
    <string name="dot_active">dot active</string>
    <string name="food">Food</string>
    <string name="travel">Travel</string>
    <string name="shop">Shop</string>
    <string name="others">Others</string>
    <string name="see_expense_history">See Expense History</string>
    <string name="title_last_month">Expenses of February 2022</string>
    <string name="email_title">Email</string>
    <string name="email_hide">r****s@gmail.com</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="real_name_title">Real Name</string>
    <string name="change_email">Change Email</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password_title">Change Password</string>
    <string name="update_limit">Update Limit</string>
    <string name="ok">Ok</string>
    <string name="please_wait">Please wait...</string>
</resources>