<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/small_to_normal"
    tools:context=".ui.SetLimitActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_set_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_set_limit"
        android:textAppearance="@style/TextTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_description_set_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small"
        android:text="@string/desc_set_limit"
        android:textAppearance="@style/TextSubtitle"
        app:layout_constraintTop_toBottomOf="@id/tv_title_set_limit" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_set_limit_food"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:hint="@string/hint_limit_for_food"
        app:layout_constraintTop_toBottomOf="@id/tv_description_set_limit"
        app:prefixText="@string/rp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_set_limit_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:maxLength="9" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_set_limit_shop"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_to_normal"
        android:hint="@string/hint_set_limit_for_shopping"
        app:layout_constraintTop_toBottomOf="@id/til_set_limit_food"
        app:prefixText="@string/rp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_set_limit_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:maxLength="9" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_set_limit_travel"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_to_normal"
        android:hint="@string/hint_set_limit_for_travel"
        app:layout_constraintTop_toBottomOf="@id/til_set_limit_shop"
        app:prefixText="@string/rp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_set_limit_travel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:maxLength="9" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_set_limit_others"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_to_normal"
        android:hint="@string/hint_limit_for_others"
        app:layout_constraintTop_toBottomOf="@id/til_set_limit_travel"
        app:prefixText="@string/rp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_set_limit_others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:maxLength="9" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_total_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/dummy_limit"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textAppearance="@style/TextNormal"
        app:layout_constraintBottom_toTopOf="@+id/tv_total_limit"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_continue_set_limit"
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_go"
        app:icon="@drawable/ic_chevron_right"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>