<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/small_to_normal"
    tools:context=".ui.SignUpActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_greeting_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/greeting_sign_up"
        android:textAppearance="@style/TextTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_to_normal"
        android:text="@string/title_sign_up"
        android:textAppearance="@style/TextSecondTitle"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting_sign_up" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_description_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small"
        android:text="@string/description_sign_up"
        android:textAppearance="@style/TextSubtitle"
        app:layout_constraintTop_toBottomOf="@id/tv_title_sign_up" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_sign_up_full_name"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_to_normal"
        android:hint="@string/full_name_input"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:layout_constraintTop_toBottomOf="@id/tv_description_sign_up">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_sign_up_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="30" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_sign_up_email"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_to_normal"
        android:hint="@string/email_input"
        app:layout_constraintTop_toBottomOf="@id/til_sign_up_full_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_sign_up_password"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_to_normal"
        android:hint="@string/password_input"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/til_sign_up_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_sign_up_confirm_password"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_to_normal"
        android:hint="@string/confirm_password_input"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/til_sign_up_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_sign_up_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_up"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_to_huge"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/til_sign_up_confirm_password" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description_to_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textAppearance="@style/TextSubtitle"
            android:textSize="@dimen/text_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_to_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign_in"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_normal"
            app:layout_constraintBottom_toBottomOf="@+id/tv_description_to_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_description_to_sign_up"
            app:layout_constraintTop_toTopOf="@+id/tv_description_to_sign_up" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>