<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_total_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_statistic"
        android:textAppearance="@style/TextSubtitle"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_total_spent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/spent_amount"
        android:textAppearance="@style/TextThirdTitle"
        android:textColor="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_total_balance" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_slash_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/very_small"
        android:text="@string/slash"
        android:textAppearance="@style/TextThirdTitle"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/tv_total_spent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_total_balance" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_limit_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/very_small"
        android:text="@string/budget_statistic"
        android:textAppearance="@style/TextThirdTitle"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/tv_slash_amount"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_total_balance" />

</androidx.constraintlayout.widget.ConstraintLayout>