<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_to_normal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_dialog_prompt_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textAlignment="center"
            android:textAppearance="@style/TextThirdTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_dialog_prompt_positive_action"
            style="@style/ButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_to_normal"
            android:text="@string/yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_prompt_message" />

        <Button
            android:id="@+id/btn_dialog_prompt_negative_action"
            style="@style/ButtonTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_to_normal"
            android:layout_marginEnd="@dimen/small"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@id/btn_dialog_prompt_positive_action"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_prompt_message" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>